arches/app/media/css/arches-nifty.css
/* ... */
.switch-section.disabled::before {
    content: '.';
    position: absolute;
    margin-left: -5px;
    background: rgba(214,214,214,0.3);
    color: transparent;
    z-index: 1;
    width: 100%;
    height: 100%;
}
.graph-base-content .alert-active .ep-form-content.card-grid {
    top: 0px;
}
.wizard-card-tools {
    float: right;
    padding-left: 10px;
    margin-top: 7px;
    font-size: 19px;
}
div.row.widget-wrapper {
    margin: 0;
    margin-right: 10px;
    padding: 5px 5px 15px 5px;
}

.input-group .form-control {
    position: relative;
    z-index: 0;
    float: left;
    width: 100%;
    margin-bottom: 0;
}

.widget-preview div.row.widget-wrapper:hover {
    background: #fafafa;
}

.widget-preview {
    border: 1px solid transparent;
}
.widget-preview * {
    cursor: pointer;
}
.widget-preview.active {
    background: #fcfcfc;
    border: 1px solid #ddd;
    margin-right: 11px;
}
.panel-heading.note-toolbar {
    height: auto;
}
.card-selection-container {
	-ms-flex: 0 0 300px;
    -webkit-flex: 0 0 300px;
    flex: 0 0 300px;
    margin-bottom: 0px;
    background-color: #fafafa;
    padding: 0px 10px 10px 10px;
    border-right: solid 1px #dddddd;
    overflow-y: scroll;
    overflow-x: hidden;
}
.selected-cards-container {
	-ms-flex: 0 0 350px;
    -webkit-flex: 0 0 350px;
    flex: 0 0 350px;
    margin-bottom: 0px;
    margin-left: -1px;
    padding: 0px;
    overflow-y: scroll;
    overflow-x: hidden;
}

.form-settings-container {
  width:100%;
  background-color: rgb(246, 247, 248);
	-ms-flex: 0 0 calc(100% - 650px);
  -webkit-flex: 0 0 calc(100% - 650px);
  flex: 0 0 calc(100% - 650px);
  margin-bottom: 0px;
  margin-left: -1px;
  padding: 10px;
  overflow-y: scroll;
  overflow-x: hidden;
}
.ep-card-manager-content {
	position: absolute;
	top: 100px;
	left: 0px;
	right: 0px;
	padding: 0px;
	z-index: 10;
	transition: all .30s ease;
}
.card-selector {
	height: 60px;
    border-bottom: 1px solid #ddd;
    padding: 10px 10px;
    margin-top: -15px;
}
.form-report-tab {
	height: 72px;
	width: 97px;
	margin: 0px;
	font-size: 12px;
	color: #777;
}
.card-nav-icon {
	font-size: 21px;
	margin-right: 25px;
}
.no-instructions-shim {
	margin-top: -40px;
}

.card-drag-panel {
	position: absolute;
	top: 10px;
	left: 290px;
	width: calc(100% - 290px);
}
.card-drag-panel-target {
	height: 100vh;
	background: #f4f4f4;
	border: 1px solid #ddd;
	margin: -30px 0px 20px 0px;
	border-radius: 2px;
	padding: 5px 25px;
}
.rr-drag-panel-target {
	height: 100vh;
	background: #f4f4f4;
	border: 1px solid #ddd;
	border-radius: 2px;
	padding: 0px 25px;
}
.card-listing-panel {
	position: absolute;
	top: -20px;
	left: -10px;
	padding: 7px;
	height: 100vh;
	width: 290px;
	border: 1px solid #e9e9e9;
	background: #fcfcfc;
}
.add-card-icon-placement {
	position: absolute;
	top: 210px;
	left: 33%;
}
.rr-card-icon-placement {
	position: absolute;
	top: 210px;
	left: 40%;
}
.arches-menu-icon {
	font-size: 10px;
	color: #abb1b7;
	transform: translate(0, -2px);
}

.arches-menu-item-disabled:hover {
    cursor: default;
    margin-left: -3px;
}


.related-resources-container {
    -ms-flex: 0 0 calc(100% - 400px);
    -webkit-flex: 0 0 calc(100% - 400px);
    flex: 0 0 calc(100% - 400px);
    margin-bottom: 0px;
    margin-left: -1px;
    padding: 0px;
    overflow-y: scroll;
    overflow-x: hidden;
    transition: all .5s;
}

.relation-properties-buttons {
    display: flex;
    flex-direction: row;
    position: absolute;
    right: 15px;
    align-content: flex-end;
}

.relation-properties-button {
    padding-left: 5px
}

.related-resources-title-container {
    display: flex;
    flex-direction: row;
}

.search-candidate-link.unrelatable-search-result {
    color: #999;
}

.dropdown-menu.mega-dropdown-menu.display-related-resource-properties {
    display: block;
    margin-top: 5px;
}

.related-resources-editor-container {
    position: absolute;
    width: 100%;
}

.rr-panel-note {
    text-align: center;
    font-size: 17px;
}

.rr-drag-panel-target {
    height: 100vh;
    background: #ebeef0;
    border: 1px solid #ddd;
    border-bottom-width: 0px;
    border-radius: 2px;
    padding: 0px 25px;
}

#container .table-bordered td, #container .table-bordered th.rr-tab-field {
    font-size: 13px;
    font-weight: 400;
    color: #666;
}

.settings-config-panel {
    padding: 5px;
}

.shim {
    margin-top: -25px;
}

.rr-grid {
    position: absolute;
    top: 50px;
    left: 20px;
}

.rr-grid-item {
    float: left;
    margin: 3px;
    width: 360px;
    border: 1px solid #ddd;
    opacity: .79;
}

.resource-relation-description {
    color: #888;
    padding: 10px;
    font-size: 13px;
    margin-top: 15px;
    margin-right: 10px;
    height: 145px;
    border: 1px solid #ddd;
}

.settings-crud-panel {
    margin-top: 10px;
    margin-left: -20px;
}

.no-instructions-shim {
    margin-top: -60px;
}

.report-image-grid {
    width: 100%;
    margin-bottom: 20px;
}

.add-card-icon {
	color: #fff;
	height: 56px;
	width: 56px;
	transform: translate(0, 5px);
}
.add-card-message-placement {
    margin-top: 325px;
    width: 100%;
}

.rr-card-message-placement {
	margin-top: 280px;
    width: 100%;
    font-size: 16px;
    padding-left: 20px;
    padding-right: 20px;
    font-weight: 300;
    color: #999;
}

.table>tbody>.rr-table-row>td {
    padding-top: 7px;
    padding-bottom: 7px;
}

.table>tbody>.rr-table-row {
    height: 40px;
}

.rr-text-notes {

}

.rr-result-grid-container {
	margin-top: 30px;
    width: 100%;
    font-size: 16px;
    padding-left: 0px;
    padding-right: 0px;
    font-weight: 300;
    color: #999;
}

.add-card-message-subtitle {
	margin-top: -5px;
	font-size: 13px;
	color: #aaa;
	padding-right: 20px;
	line-height: 1.1em;
}
.dragged-card-panel {
	position: absolute;
	background: transparent;
    height: 100%;
    width: 350px;
    top: 0px;
    padding: 0;
}
.dragged-card-panel .report-image-grid {
    padding: 45px;
    height: 100%;
    overflow-y: auto;
}
/* ... */

